[package]
name = "hellorust"
version = "0.9.0"
authors = ["niels <code.i.pushed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { path = "../rltk_rs", features = ["serialization"] }
specs = {version = "0.15.1", features = ["serde"]}
specs-derive = "0.4.0"
serde= { version = "1.0.104", features = ["derive"] }
serde_json= "1.0.45"
wasm-bindgen = "0.2.50"
